Fix tests :)