@@ -1,33 +1,26 @@
 package io.lindstrom.mpd.support;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class Utils {
-    private static final Class<?> UNMODIFIABLE_LIST_CLASS =
-            Collections.unmodifiableList(Collections.emptyList()).getClass();
-
     public static <T> List<T> unmodifiableList(List<T> list) {
         if (list == null) {
-            return Collections.emptyList();
-        } else if (UNMODIFIABLE_LIST_CLASS.isInstance(list)) {
-            return list;
+            return List.of();
         } else {
-            return Collections.unmodifiableList(list);
+            return List.copyOf(list);
         }
     }
 
     @SafeVarargs
     public static <T> List<T> varargsToList(T head, T ...tail) {
         if (tail.length == 0) {
-            return Collections.singletonList(head);
+            return List.of(head);
         } else {
             List<T> list = new ArrayList<>();
             list.add(head);
-            list.addAll(Arrays.asList(tail));
-            return list;
+            list.addAll(List.of(tail));
+            return List.copyOf(list);
         }
     }
 }
